# 47Chat

./: .cursorignore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESILIENCE.md  agent_runtime.pseudo  constraints.txt  cursor_agent_contracts.json  docker-compose.yml  llm-context.md  package.json  pyproject.toml  pytest.ini  rag_store.faiss  requirements-dev.txt  requirements.txt  run_rag_flow.py  run_tests.ps1  run_tests.py  sample_doc.md  setup.ps1  setup.py  start_chatbot.bat  start_local.bat  test_security.py  test_types.py  validate_observability.py  validate_release.py  validate_schemas.py
.cursor/rules/: agent-commands.mdc  ai-patterns.mdc  always.mdc  bat-sync.mdc  code-quality.mdc  security.mdc  tests.mdc  workflows.mdc
.github/workflows/: ci.yml  release.yml  update_readme.yml
backend/: __init__.py  config.py  conftest.py  main.py  pytest.ini  rag_utils.py  requirements.txt  sitecustomize.py  temp_ROLE__You are a Google Cloud DevOps consultant spe.md  version.py
backend/clients/: __init__.py  circuit.py  config.py  metrics.py  retry.py
backend/clients/tests/: __init__.py  test_resilience.py
backend/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
backend/orchestrator/: __init__.py  agent.py  meta_prompt.yaml
backend/orchestrator/clients/: __init__.py  gemini_client.py  ollama_client.py  openai_chat_client.py  openai_client.py  tool_clients.py
backend/orchestrator/rag/: __init__.py  inmemory_client.py
backend/orchestrator/tests/: __init__.py  test_rag.py
backend/orchestrator/utils/: __init__.py  loader.py  metrics.py  rag_formatter.py  team_assigner.py
backend/routers/: __init__.py  system.py
backend/tests/: test_system.py
backend/uploads/: test_sample_doc.md
frontend/: __init__.py  app.py
orchestrator/: agent.py
orchestrator/clients/: ollama_client.py  tool_clients.py
orchestrator/tests/: test_rag.py
orchestrator/utils/: loader.py
schemas/: README.md
schemas/v1/: error_response.json  health_response.json  index.json  orchestration_request.json  orchestration_response.json  root_response.json  upload_response.json
tests/api/: test_schema_enforcement.py
tests/benchmarks/: test_team_assigner_benchmark.py
tests/property/: test_loader_prop.py  test_team_assigner_prop.py
tests/smoke/: test_health.py  test_import_backend.py
tests/types/: test_mypy.py
uploads/: baza_danych.md
