[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "47chat"
version = "0.1.0"
description = "AI Multi-Agent Orchestrator with RAG capabilities"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "47Chat Contributors"}]

[tool.setuptools]
packages = ["backend", "frontend"]
dependencies = [
    "fastapi>=0.104,<1.0",
    "uvicorn[standard]>=0.24,<1.0",
    "python-multipart>=0.0.6,<1.0",
    "faiss-cpu>=1.7,<2.0",
    "sentence-transformers>=2.2,<3.0",
    "pypdf>=3.17,<4.0",
    "markdown>=3.5,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=4.9,<5.0",
    "requests>=2.31,<3.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "pyyaml>=6.0,<7.0",
    "streamlit>=1.29,<2.0",
    "langgraph>=0.0.32,<1.0",
    "slowapi>=0.1.9,<1.0",
    "openai>=1.6,<2.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<0.6",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=5,<6",
    "safety>=3,<4",
    "pre-commit>=3.5,<4"
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","W","PL","RUF"]
ignore = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
